Finish easy level + add hard level button.

--- a/snake.html
+++ b/snake.html
@@ -18,11 +18,11 @@
     <nav>
       <button class="reset">New Game</button>
     	<span id="snakeMsg"></span>
-    	<button class="level selected">Easy</button>
-    	<button class="level">Hard</button>
+    	<button class="levelEasy selected">Easy</button>
+    	<button class="levelHard">Hard</button>
     </nav>
 
-    <canvas id="snakeCanvas" width="1200" height="540"></canvas>
+    <canvas id="snakeCanvas" width="1020" height="540"></canvas>
 
     <script src="scripts/snake.js" charset="utf-8"></script>
 
