--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <h1><span>Snake</span></h1>
+      <h1>The <br> <span>Snake</span> <br> game </h1>
     </header>
 
     <nav>
@@ -22,7 +22,7 @@
     	<button class="levelHard">Hard</button>
     </nav>
 
-    <canvas id="snakeCanvas" width="1020" height="540"></canvas>
+    <canvas id="snakeCanvas" width="870" height="510"></canvas>
 
     <script src="scripts/snake.js" charset="utf-8"></script>
 
