Snake game - Refactoring pt2.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <canvas id="snakeCanvas" width="870" height="510"></canvas>
 
+    <footer><a href="https://github.com/mariheck" target="_blank">Made with &#10084; by Marine Heckler</a></footer>
+
     <script src="scripts/snake.js" charset="utf-8"></script>
 
   </body>
